--- a/refs.bib
+++ b/refs.bib
@@ -29,5 +29,18 @@
   langid = {english}
 }
 
+@article{stoffel2017,
+    title = {rptR: Repeatability estimation and variance decomposition by generalized linear mixed-effects models},
+    author = {Martin A. Stoffel and Shinichi Nakagawa and Holger Schielzeth},
+    journal = {Methods in Ecology and Evolution},
+    year = {2017},
+    volume = {8},
+    issue = {11},
+    pages = {1639???1644},
+    doi = {10.1111/2041-210X.12797},
+    url = {http://onlinelibrary.wiley.com/doi/10.1111/2041-210X.12797/full},
+  }
+
+
 
 
